--- a/src/saas/_interface.sass
+++ b/src/saas/_interface.sass
@@ -1,7 +1,7 @@
 body
   font-family: sans-serif
 img
-  min-width: 100%
+  max-width: 100%
 .container
   width: 1170px
   margin: auto
@@ -11,7 +11,7 @@ img
 @media (max-width: 768px)
   .container
     max-width: 580px
-    width: 95%
+    width: 90%
 
 .button
   border-radius: 10px
