Подключены шрифты Regular и Bold

--- a/src/saas/blocks/_navbar.sass
+++ b/src/saas/blocks/_navbar.sass
@@ -16,10 +16,10 @@
   &__phone
     display: inline-block
     color: $text-color
-    font-style: 20px
-    font-weight: 400
+    font-style: 20px    
     text-decoration: none
     margin-top: 10px
+    +bold
 @media (max-width: 768px)
   .navbar
     &__contacts
