--- a/src/css/style.css
+++ b/src/css/style.css
@@ -46,12 +46,12 @@ img {
   border-radius: 10px;
   background-color: #ffd200;
   border: none;
-  padding: 15px 20px;
+  padding: 17px 30px;
 }
 
 /*Импорт стилей шапки*/
 .navbar {
-  padding: 8px 0;
+  /*padding: 2px 0*/
 }
 
 .navbar-block {
@@ -64,6 +64,10 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.navbar__logo {
+  padding-top: 4px;
 }
 
 .navbar__info {
@@ -84,18 +88,23 @@ img {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  font-size: 13px;
 }
 
 .navbar__button {
   margin-left: 30px;
+  color: #333333;
+  font-size: 13px;
+  font-family: 'Museo Sans Bold', serif;
+  font-weight: 700;
 }
 
 .navbar__phone {
   display: inline-block;
   color: #333333;
-  font-style: 20px;
+  font-size: 20px;
   text-decoration: none;
-  margin-top: 10px;
+  margin-top: 6px;
   font-family: 'Museo Sans Bold', serif;
   font-weight: 700;
 }
@@ -115,7 +124,8 @@ img {
 
 /*Стили для главного экрана*/
 .hero {
-  padding: 50px 0;
+  padding: 56px 0;
+  background-color: #f5f5f5;
 }
 
 .hero-block {
@@ -125,25 +135,28 @@ img {
 }
 
 .hero-text {
-  -ms-flex-preferred-size: 45%;
-      flex-basis: 45%;
-  padding-right: 120px;
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+  padding-right: 14px;
 }
 
 .hero-text__title {
+  color: #333333;
   font-size: 41px;
-  font-weight: 790;
   line-height: 55px;
-  margin-bottom: 40px;
+  margin-bottom: 37px;
+  margin-left: 0;
   font-family: 'Museo Sans Bold', serif;
   font-weight: 700;
 }
 
 .hero-text__subtitle {
   display: inline-block;
+  color: #333333;
   font-size: 20px;
-  font-weight: 500;
-  margin-bottom: 70px;
+  margin-bottom: 68px;
+  font-family: 'Museo Sans Bold', serif;
+  font-weight: 700;
 }
 
 .hero-list {
@@ -158,12 +171,12 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-bottom: 25px;
+  margin-bottom: 28px;
 }
 
 .hero-list__image {
-  width: 40px;
-  height: 40px;
+  width: 38px;
+  height: 38px;
   border: 2px solid #ffd200;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -179,7 +192,10 @@ img {
 }
 
 .hero-list__text {
+  color: #333333;
   max-width: 300px;
+  font-size: 14px;
+  line-height: 21px;
 }
 
 @media (max-width: 1200px) {
