--- a/src/saas/blocks/_hero.sass
+++ b/src/saas/blocks/_hero.sass
@@ -1,31 +1,34 @@
 .hero 
-  padding: 50px 0
+  padding: 56px 0
+  background-color: #f5f5f5
   &-block
     display: flex    
   &-text
-    flex-basis: 45%
-    padding-right: 120px
-    &__title
-      font-size: 41px
-      font-weight: 790
+    flex-basis: 50%
+    padding-right: 14px    
+    &__title      
+      color: $text-color
+      font-size: 41px      
       line-height: 55px
-      margin-bottom: 40px
+      margin-bottom: 37px
+      margin-left: 0
       +bold 
     &__subtitle
       display: inline-block
-      font-size: 20px
-      font-weight: 500
-      margin-bottom: 70px
+      color: $text-color
+      font-size: 20px      
+      margin-bottom: 68px
+      +bold
   &-list 
     margin: 0
     padding: 0
     &__item 
       display: flex
       align-items: center
-      margin-bottom: 25px
+      margin-bottom: 28px
     &__image
-      width: 40px
-      height: 40px
+      width: 38px
+      height: 38px
       border: 2px solid $main-color
       display: flex
       align-items: center
@@ -33,7 +36,10 @@
       border-radius: 50%
       margin-right: 30px
     &__text
+      color: $text-color
       max-width: 300px
+      font-size: 14px
+      line-height: 21px 
 @media (max-width: 1200px)
   .hero 
     &-block 
@@ -59,5 +65,6 @@
         font-size: 12px
       &__image
         margin-right: 15px
+
 
       
