--- a/src/saas/blocks/_navbar.sass
+++ b/src/saas/blocks/_navbar.sass
@@ -1,9 +1,11 @@
 .navbar
-  padding: 8px 0
+  /*padding: 2px 0*/
   &-block 
     display: flex
     justify-content: space-between
     align-items: center
+  &__logo
+    padding-top: 4px    
   &__info 
     display: flex
     align-items: center
@@ -11,14 +13,18 @@
   &__address
     display: flex
     flex-direction: column
+    font-size: 13px
   &__button
     margin-left: 30px
+    color: $text-color
+    font-size: 13px
+    +bold
   &__phone
     display: inline-block
     color: $text-color
-    font-style: 20px    
+    font-size: 20px    
     text-decoration: none
-    margin-top: 10px
+    margin-top: 6px
     +bold
 @media (max-width: 768px)
   .navbar
