src/Подогнана вёрстка под макет по принципу Pixel Perfect

--- a/src/saas/blocks/_hero.sass
+++ b/src/saas/blocks/_hero.sass
@@ -11,7 +11,7 @@
       font-size: 41px      
       line-height: 55px
       margin-bottom: 37px
-      margin-left: 0
+      margin-left: -3px      
       +bold 
     &__subtitle
       display: inline-block
