--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,6 +15,11 @@
   font-style: normal;
 }
 
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 body {
   font-family: 'Museo Sans Light', serif;
   font-weight: 300;
@@ -47,6 +52,38 @@ img {
   background-color: #ffd200;
   border: none;
   padding: 17px 30px;
+}
+
+.button:hover {
+  background-color: #ffdb33;
+  cursor: pointer;
+}
+
+.section {
+  padding: 90px 0;
+}
+
+.section-title {
+  font-size: 24px;
+  font-family: 'Museo Sans Bold', serif;
+  font-weight: 700;
+}
+
+.section-subtitle {
+  display: block;
+  font-size: 16px;
+}
+
+.section-text {
+  display: inline-block;
+  font-size: 15px;
+}
+
+.input {
+  border: 1px solid #dddddd;
+  padding: 23px 26px;
+  font-size: 15px;
+  border-radius: 10px;
 }
 
 /*Импорт стилей шапки*/
@@ -124,7 +161,7 @@ img {
 
 /*Стили для главного экрана*/
 .hero {
-  padding: 56px 0;
+  padding: 56px 0 50px;
   background-color: #f5f5f5;
 }
 
@@ -135,9 +172,9 @@ img {
 }
 
 .hero-text {
-  -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
-  padding-right: 14px;
+  -ms-flex-preferred-size: 52%;
+      flex-basis: 52%;
+  padding-right: 100px;
 }
 
 .hero-text__title {
@@ -173,9 +210,13 @@ img {
   margin-bottom: 28px;
 }
 
+.hero-list__item:last-child {
+  margin-bottom: 0;
+}
+
 .hero-list__image {
-  width: 38px;
-  height: 38px;
+  width: 40px;
+  height: 40px;
   border: 2px solid #ffd200;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -230,6 +271,104 @@ img {
   }
   .hero-list__image {
     margin-right: 15px;
+  }
+}
+
+/*Стили для блока offer*/
+.offer {
+  background: url("../img/offer/offer-bg.png") no-repeat;
+  background-position: right;
+  background-size: contain;
+  position: relative;
+  padding: 56px 0 90px;
+}
+
+.offer:before {
+  content: '';
+  width: 50%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #fff;
+}
+
+.offer-block {
+  width: 50%;
+  padding-right: 90px;
+  position: relative;
+}
+
+.offer__title {
+  color: #333333;
+  max-width: 360px;
+  line-height: 35px;
+  margin-bottom: 20px;
+}
+
+.offer__subtitle {
+  color: #333333;
+  max-width: 250px;
+  margin-bottom: 30px;
+}
+
+.offer__input {
+  color: #999999;
+  margin-bottom: 30px;
+  width: 240px;
+}
+
+.offer__input:first-child {
+  margin-right: 10px;
+}
+
+.offer__button {
+  color: #333333;
+  width: 100%;
+  min-height: 70px;
+  margin-bottom: 26px;
+  font-family: 'Museo Sans Bold', serif;
+  font-weight: 700;
+}
+
+.offer__text {
+  color: #333333;
+  max-width: 230px;
+  line-height: 24px;
+}
+
+.offer__text:first-child {
+  margin-right: 60px;
+}
+
+.offer__phone {
+  color: #333333;
+  font-size: 15px;
+  text-decoration: none;
+  font-family: 'Museo Sans Bold', serif;
+  font-weight: 700;
+}
+
+@media (max-width: 1200px) {
+  .offer {
+    background-size: cover;
+  }
+  .offer__input {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  .offer__button {
+    font-size: 13px;
+  }
+}
+
+@media (max-width: 768px) {
+  .offer {
+    background: #fff;
+  }
+  .offer-block {
+    width: 100%;
+    padding-right: 0;
   }
 }
 /*# sourceMappingURL=style.css.map */
