--- a/src/saas/_interface.sass
+++ b/src/saas/_interface.sass
@@ -1,3 +1,5 @@
+*
+  box-sizing: border-box
 body
   +reg 
 img
@@ -18,3 +20,22 @@ img
   background-color: $main-color
   border: none
   padding: 17px 30px
+  &:hover
+    background-color: lighten($main-color, 10%)
+    cursor: pointer
+.section
+  padding: 90px 0
+  &-title 
+    font-size: 24px
+    +bold
+  &-subtitle
+    display: block
+    font-size: 16px
+  &-text
+    display: inline-block
+    font-size: 15px
+.input
+  border: 1px solid $border-input
+  padding: 23px 26px 
+  font-size: 15px
+  border-radius: 10px
