--- a/src/saas/blocks/_hero.sass
+++ b/src/saas/blocks/_hero.sass
@@ -1,17 +1,17 @@
 .hero 
-  padding: 56px 0
-  background-color: #f5f5f5
+  padding: 56px 0 50px
+  background-color: $secondary
   &-block
     display: flex    
   &-text
-    flex-basis: 50%
-    padding-right: 14px    
+    flex-basis: 52%
+    padding-right: 100px    
     &__title      
       color: $text-color
       font-size: 41px      
       line-height: 55px
-      margin-bottom: 37px          
-      +bold 
+      margin-bottom: 37px                
+      +bold       
     &__subtitle
       display: inline-block
       color: $text-color
@@ -25,9 +25,11 @@
       display: flex
       align-items: center
       margin-bottom: 28px
+      &:last-child
+        margin-bottom: 0
     &__image
-      width: 38px
-      height: 38px
+      width: 40px
+      height: 40px
       border: 2px solid $main-color
       display: flex
       align-items: center
