--- a/src/saas/blocks/_offer.sass
+++ b/src/saas/blocks/_offer.sass
@@ -29,6 +29,7 @@
     color: $input-color
     margin-bottom: 30px
     width: 240px
+    outline: none
     &:first-child
       margin-right: 10px
   &__button
@@ -36,6 +37,7 @@
     width: 100%
     min-height: 70px
     margin-bottom: 26px
+    outline: none
     +bold 
   &__text 
     color: $text-color
