--- a/src/saas/blocks/_navbar.sass
+++ b/src/saas/blocks/_navbar.sass
@@ -18,6 +18,7 @@
     margin-left: 30px
     color: $text-color
     font-size: 13px
+    outline: none
     +bold
   &__phone
     display: inline-block
