Добавлен слайдер в раздел Портфолио.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -67,6 +67,7 @@ img {
   font-size: 24px;
   font-family: 'Museo Sans Bold', serif;
   font-weight: 700;
+  text-align: center;
 }
 
 .section-subtitle {
@@ -84,6 +85,10 @@ img {
   padding: 23px 26px;
   font-size: 15px;
   border-radius: 10px;
+}
+
+.arrows__left:hover, .arrows__right:hover {
+  cursor: pointer;
 }
 
 /*Импорт стилей шапки*/
@@ -301,6 +306,7 @@ img {
   max-width: 360px;
   line-height: 35px;
   margin-bottom: 20px;
+  text-align: left;
 }
 
 .offer__subtitle {
@@ -369,6 +375,34 @@ img {
     width: 100%;
     padding-right: 0;
   }
+}
+
+/*Стили для блока portfolio*/
+.portfolio {
+  background: #f5f5f5 url("../img/portfolio/portfolio-pattern.jpg") repeat-y center left;
+  background-size: 50%;
+}
+
+.portfolio__title {
+  max-width: 500px;
+  margin: auto;
+  margin-bottom: 100px;
+}
+
+.portfolio__arrows {
+  max-width: 120px;
+  margin: auto;
+  margin-top: 68px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.slider__image {
+  margin: auto;
 }
 
 /*Стили модального окна*/
