--- a/src/saas/_interface.sass
+++ b/src/saas/_interface.sass
@@ -28,6 +28,7 @@ img
   &-title 
     font-size: 24px
     +bold
+    text-align: center
   &-subtitle
     display: block
     font-size: 16px
@@ -39,4 +40,9 @@ img
   padding: 23px 26px 
   font-size: 15px
   border-radius: 10px
+.arrows
+  &__left, &__right
+    &:hover 
+      cursor: pointer
+
   
