Свёрстан блок с ценами.

--- a/src/saas/blocks/_portfolio.sass
+++ b/src/saas/blocks/_portfolio.sass
@@ -1,8 +1,7 @@
 .portfolio 
   background: $secondary url('../img/portfolio/portfolio-pattern.jpg') repeat-y center left
   background-size: 50%
-  &__title
-    max-width: 500px
+  &__title    
     margin: auto
     margin-bottom: 100px
   &__arrows
@@ -14,4 +13,6 @@
 .slider 
   &__image
     margin: auto
+  &__item
+    outline: none
     
