--- a/src/saas/style.sass
+++ b/src/saas/style.sass
@@ -9,6 +9,8 @@
 @import 'blocks/_offer'
 /*Стили для блока portfolio*/ 
 @import 'blocks/_portfolio'
+/*Стили для блока price*/ 
+@import 'blocks/_price'
 
 /*Стили модального окна*/ 
 @import 'blocks/_modal'
