--- a/src/saas/style.sass
+++ b/src/saas/style.sass
@@ -11,6 +11,8 @@
 @import 'blocks/_portfolio'
 /*Стили для блока price*/ 
 @import 'blocks/_price'
+/*Стили для блока 5 шагов*/ 
+@import 'blocks/_steps'
 
 /*Стили модального окна*/ 
 @import 'blocks/_modal'
