--- a/src/saas/_colors.sass
+++ b/src/saas/_colors.sass
@@ -2,5 +2,6 @@ $main-color: #ffd200
 $text-color: #333333
 $secondary: #f5f5f5
 $border-input: #dddddd
+$border-input-focus: #29B0D9
 $input-color: #999999
 $border-card: #e8e8e8
