--- a/src/saas/_interface.sass
+++ b/src/saas/_interface.sass
@@ -41,6 +41,9 @@ img
   padding: 23px 26px 
   font-size: 15px
   border-radius: 10px
+  &:focus 
+     background: #ffe 
+     border: 1px solid $border-input-focus
 .arrows
   &__left, &__right
     &:hover 
