--- a/src/saas/blocks/_portfolio.sass
+++ b/src/saas/blocks/_portfolio.sass
@@ -5,11 +5,11 @@
     margin: auto
     margin-bottom: 100px
   &__arrows
-    max-width: 120px
+    /*max-width: 150px*/
     margin: auto
     margin-top: 68px
     display: flex
-    justify-content: space-between
+    justify-content: center            
 .slider 
   &__image
     margin: auto
@@ -20,4 +20,12 @@
    margin: 0 20px
   &-list 
    margin: 0 -20px
+
+.arrows
+  &__right
+    margin-left: 15px
+.arrows
+  &__left
+    margin-right: 15px
     
+
