Подключена валидация всех форм на сайте.

--- a/src/saas/_interface.sass
+++ b/src/saas/_interface.sass
@@ -14,6 +14,9 @@ img
   .container
     max-width: 580px
     width: 90%
+  .section
+    padding-top: 60px
+    padding-bottom: 60px
 
 .button
   border-radius: 10px
@@ -47,6 +50,17 @@ img
 .arrows
   &__left, &__right
     &:hover 
-      cursor: pointer
+      cursor: pointer  
+.invalid  
+  border: 1px solid red
+  color: red  
+  font-size: 14px
+  
+
+  
+  
+  
+  
+ 
 
   
