--- a/src/saas/blocks/_modal.sass
+++ b/src/saas/blocks/_modal.sass
@@ -66,4 +66,16 @@
     margin-top: 5px         
     text-decoration: none
     +bold
+form
+  position: relative     
+  #username3-error
+    position: absolute
+    top: 65px
+    left: 28px
+    border: none
+  #phone3-error
+    position: absolute
+    top: 145px
+    left: 28px
+    border: none
 
