--- a/src/saas/blocks/_offer.sass
+++ b/src/saas/blocks/_offer.sass
@@ -50,7 +50,20 @@
     color: $text-color
     font-size: 15px    
     text-decoration: none
-    +bold
+    +bold    
+form
+  position: relative     
+  #username1-error
+    position: absolute
+    top: 65px
+    left: 28px
+    border: none
+  #phone1-error
+    position: absolute
+    top: 65px
+    left: 282px
+    border: none
+
 @media (max-width: 1200px)
   .offer
     background-size: cover   
