--- a/src/saas/style.sass
+++ b/src/saas/style.sass
@@ -7,12 +7,14 @@
 @import 'blocks/_hero'
 /*Стили для блока offer*/ 
 @import 'blocks/_offer'
-/*Стили для блока portfolio*/ 
+/*Стили для блока Портфолио*/ 
 @import 'blocks/_portfolio'
-/*Стили для блока price*/ 
+/*Стили для блока Цены*/ 
 @import 'blocks/_price'
 /*Стили для блока 5 шагов*/ 
 @import 'blocks/_steps'    
+/*Стили для блока Бриф*/ 
+@import 'blocks/_brif'
 
 /*Стили модального окна*/ 
 @import 'blocks/_modal'
