--- a/src/css/style.css
+++ b/src/css/style.css
@@ -45,6 +45,10 @@ img {
     max-width: 580px;
     width: 90%;
   }
+  .section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
 }
 
 .button {
@@ -95,6 +99,12 @@ img {
 
 .arrows__left:hover, .arrows__right:hover {
   cursor: pointer;
+}
+
+.invalid {
+  border: 1px solid red;
+  color: red;
+  font-size: 14px;
 }
 
 /*Импорт стилей шапки*/
@@ -360,6 +370,24 @@ img {
   font-weight: 700;
 }
 
+form {
+  position: relative;
+}
+
+form #username1-error {
+  position: absolute;
+  top: 65px;
+  left: 28px;
+  border: none;
+}
+
+form #phone1-error {
+  position: absolute;
+  top: 65px;
+  left: 282px;
+  border: none;
+}
+
 @media (max-width: 1200px) {
   .offer {
     background-size: cover;
@@ -383,7 +411,7 @@ img {
   }
 }
 
-/*Стили для блока portfolio*/
+/*Стили для блока Портфолио*/
 .portfolio {
   background: #f5f5f5 url("../img/portfolio/portfolio-pattern.jpg") repeat-y center left;
   background-size: 50%;
@@ -430,7 +458,7 @@ img {
   margin-right: 15px;
 }
 
-/*Стили для блока price*/
+/*Стили для блока Цены*/
 .price__title {
   margin: auto;
   margin-bottom: 58px;
@@ -625,6 +653,191 @@ img {
   }
 }
 
+/*Стили для блока Бриф*/
+.brif {
+  background-image: url("../img/brif/brif-color-bg.png"), url("../img/brif/brif-bg.jpg");
+  background-position: left center, center right;
+  background-size: 50%, contain;
+  background-repeat: repeat-y, no-repeat;
+}
+
+.brif-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.brif__interview {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+}
+
+.brif__form {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+  padding-left: 200px;
+  text-align: center;
+}
+
+.brif__input {
+  width: 100%;
+  max-width: 370px;
+  margin-bottom: 15px;
+  outline: none;
+}
+
+.brif__button {
+  height: 70px;
+  width: 100%;
+  max-width: 370px;
+  margin-top: 15px;
+  margin-bottom: 30px;
+  font-family: 'Museo Sans Bold', serif;
+  font-weight: 700;
+}
+
+.interview {
+  padding-right: 70px;
+}
+
+.interview__title {
+  margin-bottom: 50px;
+  font-size: 22px;
+  font-family: 'Museo Sans Bold', serif;
+  font-weight: 700;
+}
+
+.interview__subtitle {
+  display: block;
+  margin-bottom: 95px;
+  font-size: 16px;
+}
+
+.interview-list {
+  list-style: none;
+  padding: 0;
+}
+
+.interview-list__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 25px;
+  font-family: 'Museo Sans Bold', serif;
+  font-weight: 700;
+}
+
+.interview-list__counter {
+  display: inline-block;
+  margin-right: 30px;
+  text-align: center;
+  line-height: 35px;
+  font-style: 14px;
+  width: 35px;
+  height: 35px;
+  border: 2px solid #333333;
+  border-radius: 50%;
+}
+
+.interview-list__text {
+  max-width: 400px;
+}
+
+.form__title {
+  color: #333333;
+  margin-bottom: 50px;
+  font-size: 22px;
+  font-family: 'Museo Sans Bold', serif;
+  font-weight: 700;
+}
+
+.form__subtitle {
+  color: #333333;
+  display: block;
+  margin-bottom: 45px;
+  font-size: 16px;
+}
+
+.form__description {
+  display: block;
+}
+
+form {
+  position: relative;
+}
+
+form #username2-error {
+  position: absolute;
+  top: 65px;
+  left: 35px;
+  border: none;
+}
+
+form #phone2-error {
+  position: absolute;
+  top: 145px;
+  left: 35px;
+  border: none;
+}
+
+form #email-error {
+  position: absolute;
+  top: 226px;
+  left: 35px;
+  border: none;
+}
+
+@media (max-width: 1200px) {
+  .brif__form {
+    padding-left: 30px;
+  }
+  .interview {
+    padding-right: 30px;
+  }
+  .interview__title {
+    font-size: 20px;
+    margin-bottom: 15px;
+  }
+  .interview__subtitle {
+    margin-bottom: 30px;
+  }
+  .interview-list__text {
+    font-size: 14px;
+    max-width: 300px;
+  }
+  .interview-list__counter {
+    margin-right: 20px;
+  }
+  .form__title {
+    font-size: 20px;
+    margin-bottom: 15px;
+  }
+  .form__subtitle {
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 768px) {
+  .brif {
+    background-image: url("../img/brif/brif-color-bg.png"), url("../img/brif/brif-bg.jpg");
+    background-position: top center, center bottom;
+    background-size: 100% 50%, cover;
+    background-repeat: repeat-x, no-repeat;
+  }
+  .brif-block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .brif__form {
+    margin-top: 80px;
+  }
+}
+
 /*Стили модального окна*/
 .modal {
   position: fixed;
@@ -731,5 +944,23 @@ img {
   text-decoration: none;
   font-family: 'Museo Sans Bold', serif;
   font-weight: 700;
+}
+
+form {
+  position: relative;
+}
+
+form #username3-error {
+  position: absolute;
+  top: 65px;
+  left: 28px;
+  border: none;
+}
+
+form #phone3-error {
+  position: absolute;
+  top: 145px;
+  left: 28px;
+  border: none;
 }
 /*# sourceMappingURL=style.css.map */
