--- a/src/saas/style.sass
+++ b/src/saas/style.sass
@@ -15,6 +15,8 @@
 @import 'blocks/_steps'    
 /*Стили для блока Бриф*/ 
 @import 'blocks/_brif'
+/*Стили для блока Подвал*/ 
+@import 'blocks/_footer'
 
 /*Стили модального окна*/ 
 @import 'blocks/_modal'
