--- a/src/css/style.css
+++ b/src/css/style.css
@@ -406,7 +406,9 @@ form #phone1-error {
     background: #fff;
   }
   .offer-block {
+    margin: auto;
     width: 100%;
+    max-width: 500px;
     padding-right: 0;
   }
 }
@@ -423,7 +425,6 @@ form #phone1-error {
 }
 
 .portfolio__arrows {
-  /*max-width: 150px*/
   margin: auto;
   margin-top: 68px;
   display: -webkit-box;
@@ -556,6 +557,12 @@ form #phone1-error {
           justify-content: space-between;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+}
+
+@media (max-width: 768px) {
+  .price__card {
+    margin: auto;
+  }
 }
 
 /*Стили для блока 5 шагов*/
@@ -791,6 +798,10 @@ form #email-error {
 }
 
 @media (max-width: 1200px) {
+  .brif {
+    background-repeat: repeat-y, no-repeat;
+    background-size: 50% 100%, cover;
+  }
   .brif__form {
     padding-left: 30px;
   }
@@ -833,8 +844,151 @@ form #email-error {
         -ms-flex-direction: column;
             flex-direction: column;
   }
+  .brif__interview {
+    margin: auto;
+    max-width: 450px;
+    padding-right: 0;
+  }
   .brif__form {
-    margin-top: 80px;
+    margin: auto;
+    margin-top: 220px;
+    max-width: 450px;
+    padding-left: 0;
+  }
+  .brif__input {
+    width: 90%;
+    max-width: 90%;
+  }
+  .brif__button {
+    width: 90%;
+    max-width: 90%;
+  }
+  .interview-list__text {
+    max-width: 200px;
+  }
+}
+
+/*Стили для блока Подвал*/
+.footer {
+  position: relative;
+}
+
+.map {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 50%;
+}
+
+.contacts {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+  padding-top: 100px;
+  padding-left: 200px;
+}
+
+.contacts__title {
+  font-family: 'Museo Sans Bold', serif;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 1.4;
+  margin-bottom: 100px;
+}
+
+.contacts-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.contacts-list {
+  padding: 0;
+  list-style: none;
+}
+
+.contacts-list__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  margin-bottom: 39px;
+}
+
+.contacts-list__icon {
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  line-height: 20px;
+  margin-right: 23px;
+  margin-top: 7px;
+}
+
+.contacts-list__text {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+}
+
+.contacts-list__phone {
+  color: #000000;
+  font-size: 16px;
+  text-decoration: none;
+  font-family: 'Museo Sans Bold', serif;
+  font-weight: 700;
+}
+
+@media (max-width: 1200px) {
+  .contacts {
+    padding-top: 100px;
+    padding-left: 30px;
+  }
+  .contacts-list__item {
+    margin-bottom: 25px;
+  }
+  .contacts__title {
+    font-size: 20px;
+    margin-bottom: 50px;
+  }
+}
+
+@media (max-width: 768px) {
+  .footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap-reverse;
+        flex-wrap: wrap-reverse;
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
+  }
+  .map {
+    position: relative;
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
+  .contacts {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    padding-top: 70px;
+    padding-left: 0px;
+    padding-bottom: 70px;
+  }
+  .contacts-block {
+    margin: auto;
+    max-width: 300px;
+  }
+  .contacts__title {
+    font-family: 'Museo Sans Bold', serif;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.4;
+    margin-bottom: 50px;
   }
 }
 
