--- a/src/saas/blocks/_offer.sass
+++ b/src/saas/blocks/_offer.sass
@@ -75,7 +75,9 @@ form
 @media (max-width: 768px)
   .offer
     background: #fff
-    &-block 
+    &-block
+      margin: auto
       width: 100%
+      max-width: 500px
       padding-right: 0
     
