--- a/src/saas/blocks/_price.sass
+++ b/src/saas/blocks/_price.sass
@@ -58,3 +58,8 @@
     display: flex
     justify-content: space-between
     flex-wrap: wrap
+
+@media (max-width: 768px)
+  .price  
+    &__card
+      margin: auto
