--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6140,7 +6140,7 @@ form #phone1-error {
 
 /*Стили для блока Бриф*/
 .brif {
-  background-image: url("../img/brif/brif-color-bg.png"), url("../img/brif/brif-bg.jpg");
+  background-image: url("../img/brif/brif-color-bg.jpg"), url("../img/brif/brif-bg.jpg");
   background-position: left center, center right;
   background-size: 50%, contain;
   background-repeat: repeat-y, no-repeat;
