Внесены правки после проверки 25 урока.

--- a/src/saas/blocks/_footer.sass
+++ b/src/saas/blocks/_footer.sass
@@ -12,7 +12,7 @@
   &__title
     +bold 
     font-size: 22px
-    line-height: 1.4
+    line-height: 33px
     margin-bottom: 100px
   &-block
     display: flex
@@ -60,14 +60,14 @@
     flex-basis: 100%       
   .contacts
     flex-basis: 100%
-    padding-top: 70px
+    padding-top: 50px
     padding-left: 0px
-    padding-bottom: 70px
+    padding-bottom: 40px
     &-block
       margin: auto
       max-width: 300px      
     &__title
       +bold 
-      font-size: 20px
-      line-height: 1.4
-      margin-bottom: 50px
+      font-size: 18px
+      line-height: 1.2      
+      margin-bottom: 39px
