--- a/src/saas/blocks/_navbar.sass
+++ b/src/saas/blocks/_navbar.sass
@@ -31,7 +31,12 @@
     &__contacts
       display: none
     &__button
-      font-size: 12px
-      padding: 15px 26px
+      font-size: 10px
+      padding: 14px 26px
+      border-radius: 5px
+      margin-left: 0px
     &__logo
       width: 90px
+  .navbar
+    &-block
+      padding: 17px 0
