--- a/src/css/style.css
+++ b/src/css/style.css
@@ -387,12 +387,24 @@ img {
 
 @media (max-width: 768px) {
   .container {
-    max-width: 580px;
+    max-width: 540px;
     width: 90%;
   }
   .section {
     padding-top: 60px;
     padding-bottom: 60px;
+  }
+}
+
+@media (max-width: 567px) {
+  .container {
+    max-width: 410px;
+  }
+}
+
+@media (max-width: 420px) {
+  .container {
+    max-width: 277px;
   }
 }
 
@@ -5649,11 +5661,16 @@ img {
     display: none;
   }
   .navbar__button {
-    font-size: 12px;
-    padding: 15px 26px;
+    font-size: 10px;
+    padding: 14px 26px;
+    border-radius: 5px;
+    margin-left: 0px;
   }
   .navbar__logo {
     width: 90px;
+  }
+  .navbar-block {
+    padding: 17px 0;
   }
 }
 
@@ -5747,14 +5764,17 @@ img {
     margin-bottom: 44px;
   }
   .hero-text {
-    padding-right: 10px;
+    padding-right: 0px;
   }
 }
 
 @media (max-width: 768px) {
+  .hero {
+    padding: 25px 0 40px;
+  }
   .hero-text__title {
     font-size: 24px;
-    line-height: 1.4;
+    line-height: 1.2;
     margin-bottom: 15px;
   }
   .hero-text__subtitle {
@@ -5765,10 +5785,26 @@ img {
     margin-bottom: 20px;
   }
   .hero-list__text {
-    font-size: 12px;
+    font-size: 14px;
+    width: 100%;
+    line-height: 16px;
   }
   .hero-list__image {
     margin-right: 15px;
+  }
+}
+
+@media (max-width: 567px) {
+  .hero-text__title {
+    font-size: 22px;
+    line-height: 27px;
+    margin-bottom: 9px;
+    letter-spacing: .1px;
+  }
+  .hero-list__text {
+    font-size: 12px;
+    max-width: 210px;
+    line-height: 16px;
   }
 }
 
@@ -5874,10 +5910,32 @@ form #phone1-error {
   }
   .offer__input {
     width: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 17px;
   }
   .offer__button {
     font-size: 13px;
+    margin-top: 15px;
+  }
+  .offer__title {
+    font-size: 20px;
+  }
+  .offer__text__phone {
+    margin-top: 7px;
+  }
+  form {
+    position: relative;
+  }
+  form #username1-error {
+    position: absolute;
+    top: 64px;
+    left: 28px;
+    border: none;
+  }
+  form #phone1-error {
+    position: absolute;
+    top: 145px;
+    left: 28px;
+    border: none;
   }
 }
 
@@ -5891,6 +5949,17 @@ form #phone1-error {
     max-width: 500px;
     padding-right: 0;
   }
+  .offer__title {
+    font-size: 18px;
+    line-height: 1.2;
+  }
+  .offer__subtitle {
+    font-size: 14px;
+    line-height: 1.2;
+  }
+  .offer__text__phone {
+    margin-top: 7px;
+  }
 }
 
 /*Стили для блока Портфолио*/
@@ -5900,6 +5969,9 @@ form #phone1-error {
 }
 
 .portfolio__title {
+  color: #333333;
+  font-size: 30px;
+  line-height: 45px;
   margin: auto;
   margin-bottom: 100px;
 }
@@ -5913,6 +5985,10 @@ form #phone1-error {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.section-title {
+  max-width: 800px;
 }
 
 .slider__image {
@@ -5939,15 +6015,31 @@ form #phone1-error {
   margin-right: 15px;
 }
 
+@media (max-width: 768px) {
+  .portfolio {
+    background: #f5f5f5 none;
+  }
+  .portfolio__title {
+    font-size: 18px;
+    line-height: 1.2;
+    margin-bottom: 40px;
+  }
+}
+
 /*Стили для блока Цены*/
 .price__title {
   margin: auto;
   margin-bottom: 58px;
+  font-size: 30px;
+  line-height: 45px;
 }
 
 .price__subtitle {
   margin-bottom: 59px;
   text-align: center;
+  font-size: 20px;
+  line-height: 45px;
+  font-weight: 100;
 }
 
 .price__card {
@@ -6040,8 +6132,29 @@ form #phone1-error {
 }
 
 @media (max-width: 768px) {
-  .price__card {
+  .section {
+    padding: 30px 0;
+  }
+  .section .price__card {
     margin: auto;
+    margin-bottom: 30px;
+  }
+  .section .price__card:last-child {
+    margin-bottom: 0;
+  }
+  .section .price__title {
+    font-size: 18px;
+    line-height: 1.2;
+    margin-bottom: 27px;
+  }
+  .section .price__subtitle {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 420px) {
+  .card__title {
+    font-size: 14px;
   }
 }
 
@@ -6091,14 +6204,22 @@ form #phone1-error {
   margin: auto;
 }
 
+.steps {
+  padding-top: 30px;
+}
+
 .steps__title {
   margin: auto;
   margin-bottom: 59px;
+  font-size: 30px;
+  line-height: 45px;
 }
 
 .steps__subtitle {
   text-align: center;
   margin-bottom: 58px;
+  font-size: 20px;
+  line-height: 45px;
 }
 
 .steps-block {
@@ -6115,6 +6236,19 @@ form #phone1-error {
   }
   .step:after {
     display: none;
+  }
+  .step__text {
+    font-size: 12px;
+    line-height: 16px;
+  }
+  .steps__title {
+    font-size: 18px;
+    line-height: 1.2;
+    margin-bottom: 27px;
+  }
+  .steps__subtitle {
+    font-size: 14px;
+    margin-bottom: 34px;
   }
   .steps-block {
     -webkit-box-orient: vertical;
@@ -6169,7 +6303,7 @@ form #phone1-error {
 .brif__input {
   width: 100%;
   max-width: 370px;
-  margin-bottom: 15px;
+  margin-bottom: 17px;
   outline: none;
 }
 
@@ -6190,6 +6324,7 @@ form #phone1-error {
 .interview__title {
   margin-bottom: 50px;
   font-size: 22px;
+  line-height: 33px;
   font-family: 'Museo Sans Bold', serif;
   font-weight: 700;
 }
@@ -6222,7 +6357,7 @@ form #phone1-error {
   margin-right: 30px;
   text-align: center;
   line-height: 35px;
-  font-style: 14px;
+  font-size: 14px;
   width: 35px;
   height: 35px;
   border: 2px solid #333333;
@@ -6231,12 +6366,14 @@ form #phone1-error {
 
 .interview-list__text {
   max-width: 400px;
+  font-size: 18px;
 }
 
 .form__title {
   color: #333333;
   margin-bottom: 50px;
   font-size: 22px;
+  line-height: 33px;
   font-family: 'Museo Sans Bold', serif;
   font-weight: 700;
 }
@@ -6258,7 +6395,7 @@ form {
 
 form #username2-error {
   position: absolute;
-  top: 65px;
+  top: 64px;
   left: 35px;
   border: none;
 }
@@ -6313,9 +6450,9 @@ form #email-error {
 
 @media (max-width: 768px) {
   .brif {
-    background-image: url("../img/brif/brif-color-bg.png"), url("../img/brif/brif-bg.jpg");
+    background-image: url("../img/brif/brif-color-bg.jpg"), url("../img/brif/brif-bg.jpg");
     background-position: top center, center bottom;
-    background-size: 100% 50%, cover;
+    background-size: 50% 45%, cover;
     background-repeat: repeat-x, no-repeat;
   }
   .brif-block {
@@ -6326,12 +6463,22 @@ form #email-error {
   }
   .brif__interview {
     margin: auto;
+    padding: 0 0 40px 0;
     max-width: 450px;
     padding-right: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
   .brif__form {
     margin: auto;
-    margin-top: 220px;
+    padding: 40px 0 0 0;
+    margin-top: 0px;
     max-width: 450px;
     padding-left: 0;
   }
@@ -6343,8 +6490,34 @@ form #email-error {
     width: 90%;
     max-width: 90%;
   }
+  .form__title {
+    font-size: 18px;
+    line-height: 25px;
+  }
+  .form__subtitle {
+    font-size: 14px;
+    line-height: 26px;
+  }
+  .form__description {
+    font-size: 14px;
+    line-height: 24px;
+  }
+  .interview__title {
+    font-size: 18px;
+    line-height: 1.2;
+  }
+  .interview__subtitle {
+    font-size: 14px;
+    line-height: 1.2;
+  }
   .interview-list__text {
-    max-width: 200px;
+    width: 80%;
+  }
+}
+
+@media (max-width: 420px) {
+  .brif__button {
+    font-size: 14px;
   }
 }
 
@@ -6371,7 +6544,7 @@ form #email-error {
   font-family: 'Museo Sans Bold', serif;
   font-weight: 700;
   font-size: 22px;
-  line-height: 1.4;
+  line-height: 33px;
   margin-bottom: 100px;
 }
 
@@ -6455,9 +6628,9 @@ form #email-error {
   .contacts {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
-    padding-top: 70px;
+    padding-top: 50px;
     padding-left: 0px;
-    padding-bottom: 70px;
+    padding-bottom: 40px;
   }
   .contacts-block {
     margin: auto;
@@ -6466,9 +6639,9 @@ form #email-error {
   .contacts__title {
     font-family: 'Museo Sans Bold', serif;
     font-weight: 700;
-    font-size: 20px;
-    line-height: 1.4;
-    margin-bottom: 50px;
+    font-size: 18px;
+    line-height: 1.2;
+    margin-bottom: 39px;
   }
 }
 
@@ -6501,25 +6674,29 @@ form #email-error {
       -ms-flex-align: center;
           align-items: center;
   margin: auto;
-  max-width: 550px;
+  max-width: 570px;
   width: 90%;
   min-width: 200px;
   background: #fff;
-  padding: 40px;
 }
 
 .modal-dialog__close {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 12px;
+  right: 12px;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  background-color: #f5f5f5;
 }
 
 .modal-dialog__close:hover {
+  background-color: white;
   cursor: pointer;
 }
 
 .modal-block {
-  padding: 40px 50px;
+  padding: 74px 100px;
 }
 
 .modal__title {
@@ -6596,5 +6773,97 @@ form #phone3-error {
   top: 145px;
   left: 28px;
   border: none;
+}
+
+@media (max-width: 1200px) {
+  .modal-dialog {
+    max-width: 417px;
+  }
+  .modal-block {
+    padding: 54px 37px 33px 39px;
+  }
+  .modal__title {
+    margin: 0 0 40px;
+  }
+}
+
+@media (max-width: 768px) {
+  .modal__title {
+    font-size: 18px;
+    line-height: 25px;
+  }
+  .modal__subtitle {
+    font-size: 14px;
+    line-height: 26px;
+  }
+}
+
+@media (max-width: 567px) {
+  .modal-dialog {
+    max-width: 410px;
+  }
+  .modal-block {
+    padding: 34px 50px 34px 49px;
+  }
+  .modal__title {
+    margin: 0 0 20px;
+  }
+  .modal__subtitle {
+    margin: 0 0 20px;
+  }
+  .modal__button {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 420px) {
+  .modal-dialog {
+    max-width: 277px;
+  }
+  .modal-block {
+    padding: 34px 50px;
+  }
+  .modal__title {
+    margin: 0 0 10px;
+    font-size: 13px;
+    line-height: 24px;
+  }
+  .modal__subtitle {
+    margin: 0 0 22px;
+    font-size: 11px;
+    line-height: 16px;
+  }
+  .modal__text {
+    font-size: 12px;
+    line-height: 15px;
+  }
+  .modal__phone {
+    font-size: 18px;
+  }
+  .modal__input {
+    padding: 15px 0 15px 23px;
+  }
+  .modal__button {
+    font-size: 12px;
+    padding: 15px 0;
+    min-height: 49px;
+  }
+  form {
+    position: relative;
+  }
+  form #username3-error {
+    position: absolute;
+    font-size: 12px;
+    top: 49px;
+    left: 26px;
+    border: none;
+  }
+  form #phone3-error {
+    position: absolute;
+    font-size: 12px;
+    top: 112px;
+    left: 26px;
+    border: none;
+  }
 }
 /*# sourceMappingURL=style.css.map */
