--- a/src/saas/_interface.sass
+++ b/src/saas/_interface.sass
@@ -12,11 +12,17 @@ img
     width: 760px
 @media (max-width: 768px)
   .container
-    max-width: 580px
+    max-width: 540px
     width: 90%
   .section
     padding-top: 60px
     padding-bottom: 60px
+@media (max-width: 567px)
+  .container
+    max-width: 410px
+@media (max-width: 420px)
+  .container
+    max-width: 277px
 
 .button
   border-radius: 10px
