--- a/src/saas/blocks/_brif.sass
+++ b/src/saas/blocks/_brif.sass
@@ -14,7 +14,7 @@
   &__input
     width: 100%
     max-width: 370px
-    margin-bottom: 15px
+    margin-bottom: 17px
     outline: none
   &__button    
     height: 70px
@@ -28,6 +28,7 @@
   &__title
     margin-bottom: 50px
     font-size: 22px
+    line-height: 33px    
     +bold
   &__subtitle
     display: block
@@ -46,18 +47,20 @@
       margin-right: 30px
       text-align: center
       line-height: 35px
-      font-style: 14px
+      font-size: 14px
       width: 35px
       height: 35px
       border: 2px solid $text-color
       border-radius: 50%
     &__text
       max-width: 400px
+      font-size: 18px      
 .form  
   &__title
     color: $text-color
     margin-bottom: 50px
     font-size: 22px
+    line-height: 33px
     +bold
   &__subtitle
     color: $text-color
@@ -70,7 +73,7 @@ form
   position: relative     
   #username2-error
     position: absolute
-    top: 65px
+    top: 64px
     left: 35px
     border: none
   #phone2-error
@@ -111,19 +114,24 @@ form
       margin-bottom: 30px
 @media (max-width: 768px)
   .brif
-    background-image: url('../img/brif/brif-color-bg.png'), url('../img/brif/brif-bg.jpg')
+    background-image: url('../img/brif/brif-color-bg.jpg'), url('../img/brif/brif-bg.jpg')
     background-position: top center, center bottom
-    background-size: 100% 50%, cover
+    background-size: 50% 45%, cover
     background-repeat: repeat-x, no-repeat
     &-block 
       flex-direction: column
     &__interview
-      margin: auto      
+      margin: auto   
+      padding: 0 0 40px 0   
       max-width: 450px
-      padding-right: 0        
+      padding-right: 0  
+      display: flex
+      align-items: center  
+      flex-wrap: wrap          
     &__form
       margin: auto
-      margin-top: 220px
+      padding: 40px 0 0 0
+      margin-top: 0px
       max-width: 450px
       padding-left: 0
     &__input
@@ -132,8 +140,35 @@ form
     &__button      
       width: 90%
       max-width: 90%
+  .form
+    &__title
+      font-size: 18px
+      line-height: 25px     
+    &__subtitle
+      font-size: 14px
+      line-height: 26px
+    &__description
+      font-size: 14px
+      line-height: 24px
   .interview
-    &-list
+    &__title
+      font-size: 18px
+      line-height: 1.2
+    &__subtitle
+      font-size: 14px
+      line-height: 1.2
+    &-list      
       &__text
-        max-width: 200px
+        width: 80%
 
+@media (max-width: 420px)
+  .brif
+    &__button
+      font-size: 14px
+
+
+        
+
+          
+    
+ 
