--- a/src/saas/blocks/_price.sass
+++ b/src/saas/blocks/_price.sass
@@ -2,9 +2,14 @@
   &__title
     margin: auto
     margin-bottom: 58px
+    font-size: 30px
+    line-height: 45px    
   &__subtitle
     margin-bottom: 59px
     text-align: center
+    font-size: 20px
+    line-height: 45px
+    font-weight: 100
   &__card
     margin-bottom: 30px
 .card
@@ -60,6 +65,22 @@
     flex-wrap: wrap
 
 @media (max-width: 768px)
-  .price  
-    &__card
-      margin: auto
+  .section
+    padding: 30px 0
+    .price  
+      &__card
+        margin: auto
+        margin-bottom: 30px
+        &:last-child
+          margin-bottom: 0
+      &__title
+        font-size: 18px
+        line-height: 1.2
+        margin-bottom: 27px
+      &__subtitle
+        font-size: 14px
+        
+@media (max-width: 420px)
+  .card  
+    &__title
+      font-size: 14px
