--- a/src/saas/blocks/_steps.sass
+++ b/src/saas/blocks/_steps.sass
@@ -27,13 +27,18 @@
     font-size: 14px
     max-width: 160px
     margin: auto
-  &s 
+  &s
+    padding-top: 30px 
     &__title
       margin: auto
       margin-bottom: 59px
+      font-size: 30px
+      line-height: 45px
     &__subtitle
       text-align: center
       margin-bottom: 58px
+      font-size: 20px
+      line-height: 45px
     &-block 
       display: flex
       flex-wrap: wrap
@@ -42,7 +47,17 @@
     margin-bottom: 30px
     &:after
       display: none
-    &s 
+    &__text
+      font-size: 12px
+      line-height: 16px
+    &s
+      &__title
+        font-size: 18px
+        line-height: 1.2 
+        margin-bottom: 27px
+      &__subtitle
+        font-size: 14px
+        margin-bottom: 34px
       &-block 
         flex-direction: column
 @media (max-width: 1200px)
