--- a/src/saas/style.sass
+++ b/src/saas/style.sass
@@ -36,6 +36,8 @@
 @import 'blocks/_brif'
 /*Стили для блока Подвал*/ 
 @import 'blocks/_footer'
+/*Стили для блока Карты*/
+@import 'blocks/_map'  
 
 /*Стили модального окна*/ 
 @import 'blocks/_modal'
