Оптимизация загрузки Яндекс.Карты на сайте.

--- a/src/saas/blocks/_map.sass
+++ b/src/saas/blocks/_map.sass
@@ -5,7 +5,7 @@
   left: 0
   overflow: hidden
   cursor: pointer
-  background: url('/src/img/footer/maploader.jpg') #ffffff no-repeat
+  background: url('../img/footer/maploader.jpg') #ffffff no-repeat
   background-position: center center
   background-size: cover  
 
