--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6653,7 +6653,7 @@ form #email-error {
   left: 0;
   overflow: hidden;
   cursor: pointer;
-  background: url("/src/img/footer/maploader.jpg") #ffffff no-repeat;
+  background: url("../img/footer/maploader.jpg") #ffffff no-repeat;
   background-position: center center;
   background-size: cover;
 }
